# smufl-mapping

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_and_test.yml
.vscode_template/: README.md
.vscode_template/linux/: launch.json  tasks.json
.vscode_template/macos/: launch.json  settings.json
.vscode_template/windows/: launch.json  settings.json  tasks.json
cmake/: GenerateLegacyMaps.cmake  GenerateSmuflMaps.cmake
docs/: legacy_mapping.schema.json  legacy_mapping_format.md
source_json/: glyphnamesBravura.json  glyphnamesFinale.json
source_json/legacy/: Broadway Copyist Perc.json  Broadway Copyist Text Ext.json  Broadway Copyist Text.json  Broadway Copyist.json  Chaconne.json  Crescendo.json  Engraver Font Extras.json  Engraver Font Set.json  Engraver Text H.json  Engraver Time.json  Finale AlphaNotes.json  Finale Copyist Text Ext.json  Finale Copyist Text.json  Finale Mallets.json  Finale Numerics.json  Finale Percussion.json  GraceNotes.json  Jazz.json  JazzCord.json  JazzPerc.json  JazzText Extended.json  JazzText.json  Kousaku Percussion.json  Kousaku.json  Maestro.json  MaestroTimes.json  Patmm.json  Petrucci.json  Pmusic.json  Rentaro.json  Tamburo.json
source_json/smuflstuff/: info.txt
src/: smufl_mapping.cpp  smufl_mapping.h
src/detail/: glyphnames_bravura.h  glyphnames_finale.h  glyphnames_legacy.h  glyphnames_smufl.h
src/detail/legacy/: broadway_copyist_legacy_map.h  broadway_copyist_perc_legacy_map.h  broadway_copyist_text_ext_legacy_map.h  broadway_copyist_text_legacy_map.h  chaconne_legacy_map.h  crescendo_legacy_map.h  engraver_font_extras_legacy_map.h  engraver_font_set_legacy_map.h  engraver_text_h_legacy_map.h  engraver_text_ncs_legacy_map.h  engraver_text_t_legacy_map.h  engraver_time_legacy_map.h  finale_alphanotes_legacy_map.h  finale_copyist_text_ext_legacy_map.h  finale_copyist_text_legacy_map.h  finale_mallets_legacy_map.h  finale_numerics_legacy_map.h  finale_percussion_legacy_map.h  gracenotes_legacy_map.h  jazz_legacy_map.h  jazzcord_legacy_map.h  jazzperc_legacy_map.h  jazztext_extended_legacy_map.h  jazztext_legacy_map.h  kousaku_legacy_map.h  kousaku_percussion_legacy_map.h  maestro_legacy_map.h  maestro_percussion_legacy_map.h  maestro_wide_legacy_map.h  maestrotimes_legacy_map.h  patmm_legacy_map.h  petrucci_legacy_map.h  pmusic_legacy_map.h  rentaro_legacy_map.h  tamburo_legacy_map.h
src/sources/: glyphnamesFinale.json
src/tools/: generate_glyphnames_map.py
tests/: CMakeLIsts.txt  CMakeLists.txt  duplicate_legacy_array_codepoints_test.py  duplicate_legacy_codepoints_test.py  duplicate_legacy_entry_codepoints_test.py  legacy_mapping_tests.cpp  smufl_mapping_tests.cpp
tests/data/: legacy_duplicate_codepoints_array.json  legacy_duplicate_entry_codepoints.json  legacy_duplicate_glyph.json
tools/: check_duplicate_codepoints.py  generate_glyphnames_map.py  generate_legacy_glyphnames_map.py  json_utils.py  validate_legacy_mappings.py
